ecies tools: fixed tabs view on smaller screens

--- a/src/app/ecies/ecies.component.scss
+++ b/src/app/ecies/ecies.component.scss
@@ -1,8 +1,15 @@
 
+@import '../../../node_modules/@angular/material/core/style/variables';
 
 nav {
-  // taken from md-card-image styles
-  margin-top: -24px !important;
   width: calc(100% + 48px);
-  margin: 0 -24px 16px;
+  margin: -24px -24px 16px !important;
+}
+
+@media ($md-xsmall) {
+  nav {
+    width: calc(100% + 32px);
+    margin: 0 -16px !important;
+    margin-top: -24px !important;
+  }
 }
